seo: compléter social meta mentions légales et climatserv17

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -9,11 +9,32 @@
     />
     <meta name="robots" content="noindex, nofollow" />
 
-    <!-- Canonical URL -->
-    <link
-      rel="canonical"
-      href="https://auvielno.fr/mentions-legales.html"
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="fr_FR" />
+    <meta property="og:title" content="Mentions Légales - Auvielno" />
+    <meta
+      property="og:description"
+      content="Mentions légales et informations réglementaires du site Auvielno."
     />
+    <meta property="og:url" content="https://auvielno.fr/mentions-legales.html" />
+    <meta
+      property="og:image"
+      content="https://auvielno.fr/images/brand/logo-nom.png"
+    />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Mentions Légales - Auvielno" />
+    <meta
+      name="twitter:description"
+      content="Mentions légales et informations réglementaires du site Auvielno."
+    />
+    <meta
+      name="twitter:image"
+      content="https://auvielno.fr/images/brand/logo-nom.png"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://auvielno.fr/mentions-legales.html" />
 
     <title>Mentions Légales - Aurélien Thébault</title>
 
