--- a/projects/climatserv17.html
+++ b/projects/climatserv17.html
@@ -37,6 +37,20 @@
       content="https://auvielno.fr/ClimatServ17/public/images/clim-hero.webp"
     />
 
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="ClimatServ17 - Application de services climatiques"
+    />
+    <meta
+      name="twitter:description"
+      content="Interface et back-office pour prestations climatiques : dépannage, entretien et installation."
+    />
+    <meta
+      name="twitter:image"
+      content="https://auvielno.fr/ClimatServ17/public/images/clim-hero.webp"
+    />
+
     <title>
       ClimatServ17 | Application de services climatiques | Aurélien Thébault
     </title>
