feat: ajouter le projet APE La Croixille au portfolio

--- a/index.html
+++ b/index.html
@@ -1157,7 +1157,7 @@
 
             <!-- Projet 4 - ClimatServ17 -->
             <article
-              class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 flex flex-col h-full lg:col-start-2"
+              class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 flex flex-col h-full"
             >
               <div class="relative overflow-hidden group h-64 flex-shrink-0">
                 <img
@@ -1214,6 +1214,78 @@
                 </div>
                 <a
                   href="projects/climatserv17.html"
+                  class="inline-block text-center bg-gray-800 text-white px-6 py-3 rounded-xl font-semibold hover:bg-gray-700 transition-colors focus:outline-none focus:ring-2 focus:ring-gray-500"
+                >
+                  <i class="fas fa-info-circle mr-2" aria-hidden="true"></i>Voir
+                  les détails
+                </a>
+              </div>
+            </article>
+
+            <!-- Projet 5 - APE La Croixille -->
+            <article
+              class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 flex flex-col h-full"
+            >
+              <div class="relative overflow-hidden group h-64 flex-shrink-0">
+                <img
+                  src="images/projects/ape/ape-logo-contour.png"
+                  alt="Logo APE La Croixille"
+                  class="w-full h-full object-contain bg-gradient-to-br from-slate-700 via-amber-800 to-slate-900 transition-transform duration-300 group-hover:scale-110 p-8"
+                  loading="lazy"
+                  width="400"
+                  height="300"
+                />
+                <div
+                  class="absolute inset-0 bg-gradient-to-br from-gray-500 to-gray-700 opacity-0 group-hover:opacity-95 transition-opacity duration-300 flex items-center justify-center p-4"
+                  aria-hidden="true"
+                >
+                  <div class="flex flex-col gap-3 w-full max-w-xs">
+                    <div
+                      class="bg-green-500/90 text-white px-4 py-2 rounded-xl font-semibold text-center"
+                    >
+                      <i class="fas fa-check mr-2" aria-hidden="true"></i
+                      >Projet terminé
+                    </div>
+                    <a
+                      href="projects/ape-la-croixille.html"
+                      class="block bg-white/10 backdrop-blur-sm border-2 border-white text-white px-6 py-3 rounded-xl font-semibold hover:bg-white/20 transition-colors focus:outline-none focus:ring-2 focus:ring-white text-center"
+                      aria-label="Voir la page APE La Croixille"
+                    >
+                      <i class="fas fa-info-circle mr-2" aria-hidden="true"></i
+                      >Voir le projet
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="p-6 flex flex-col flex-grow">
+                <h3 class="text-xl font-bold text-gray-900 mb-2">
+                  APE La Croixille - Site Associatif
+                </h3>
+                <p class="text-gray-600 mb-4 flex-grow">
+                  Plateforme full-stack pour l'Association des Parents d'Élèves
+                  avec actualités, événements, espace administrateur sécurisé et
+                  conformité accessibilité WCAG 2.1 AA.
+                </p>
+                <div class="flex flex-wrap gap-2 mb-4">
+                  <span
+                    class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium"
+                    >React</span
+                  >
+                  <span
+                    class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium"
+                    >TypeScript</span
+                  >
+                  <span
+                    class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium"
+                    >Node.js</span
+                  >
+                  <span
+                    class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium"
+                    >MongoDB</span
+                  >
+                </div>
+                <a
+                  href="projects/ape-la-croixille.html"
                   class="inline-block text-center bg-gray-800 text-white px-6 py-3 rounded-xl font-semibold hover:bg-gray-700 transition-colors focus:outline-none focus:ring-2 focus:ring-gray-500"
                 >
                   <i class="fas fa-info-circle mr-2" aria-hidden="true"></i>Voir
