fix: corriger stack APE vers PostgreSQL

--- a/projects/ape-la-croixille.html
+++ b/projects/ape-la-croixille.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Aurélien Thébault" />
     <meta
       name="keywords"
-      content="APE La Croixille, association parents d'élèves, React, TypeScript, Node.js, Express, MongoDB, accessibilité WCAG"
+      content="APE La Croixille, association parents d'élèves, React, TypeScript, Node.js, Express, PostgreSQL, Sequelize, accessibilité WCAG"
     />
 
     <link rel="canonical" href="https://auvielno.fr/projects/ape-la-croixille.html" />
@@ -176,8 +176,8 @@
               <div class="flex flex-wrap gap-2">
                 <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Node.js</span>
                 <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Express.js</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">MongoDB</span>
-                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Mongoose</span>
+                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">PostgreSQL</span>
+                <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">Sequelize</span>
                 <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">JWT</span>
                 <span class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm">REST API</span>
               </div>
