--- a/index.html
+++ b/index.html
@@ -1281,7 +1281,7 @@
                   >
                   <span
                     class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium"
-                    >MongoDB</span
+                    >PostgreSQL</span
                   >
                 </div>
                 <a
