fix: harmoniser la techno DB de ZetouPanda (MySQL)

--- a/projects/zetoupanda.html
+++ b/projects/zetoupanda.html
@@ -53,7 +53,7 @@
     />
 
     <title>
-      ZetouPanda | E-commerce React, Node.js, MongoDB | Aurélien Thébault
+      ZetouPanda | E-commerce React, Node.js, MySQL | Aurélien Thébault
     </title>
 
     <!-- Favicon -->
