feat: aligner stacks home et préciser projet APE gratuit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Aurélien Thébault" />
     <meta
       name="keywords"
-      content="Auvielno, développeur web freelance, micro-entreprise, création site vitrine, refonte site web, maintenance web, devis site internet, artisan, TPE, Mayenne, La Croixille"
+      content="Auvielno, développeur web freelance, micro-entreprise, création site vitrine, refonte site web, maintenance web, devis site internet, artisan, TPE, Mayenne, La Croixille, PostgreSQL, MySQL, Sequelize"
     />
     <meta
       name="robots"
@@ -166,6 +166,8 @@
           "JavaScript",
           "React.js",
           "Node.js",
+          "PostgreSQL",
+          "Sequelize",
           "Tailwind CSS"
         ]
       }
@@ -706,7 +708,7 @@
                 </div>
                 <div class="skill-item">
                   <div class="flex justify-between mb-2">
-                    <span class="text-white font-medium">SQL</span>
+                    <span class="text-white font-medium">PostgreSQL / MySQL</span>
                     <span class="text-gray-300">70%</span>
                   </div>
                   <div class="w-full bg-white/20 rounded-full h-2">
@@ -742,13 +744,13 @@
                 </div>
                 <div class="skill-item">
                   <div class="flex justify-between mb-2">
-                    <span class="text-white font-medium">Docker</span>
-                    <span class="text-gray-300">55%</span>
+                    <span class="text-white font-medium">Sequelize</span>
+                    <span class="text-gray-300">60%</span>
                   </div>
                   <div class="w-full bg-white/20 rounded-full h-2">
                     <div
                       class="bg-gradient-to-r from-gray-300 to-gray-400 h-2 rounded-full shadow-lg shadow-gray-400/50"
-                      style="width: 55%"
+                      style="width: 60%"
                     ></div>
                   </div>
                 </div>
@@ -999,7 +1001,7 @@
                   >
                   <span
                     class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium"
-                    >SQL</span
+                    >MySQL</span
                   >
                 </div>
                 <a
@@ -1074,7 +1076,7 @@
                   >
                   <span
                     class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium"
-                    >Express</span
+                    >PostgreSQL</span
                   >
                 </div>
                 <a
@@ -1209,7 +1211,7 @@
                   >
                   <span
                     class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium"
-                    >Tailwind CSS</span
+                    >Nodemailer</span
                   >
                 </div>
                 <a
@@ -1264,7 +1266,8 @@
                 <p class="text-gray-600 mb-4 flex-grow">
                   Plateforme full-stack pour l'Association des Parents d'Élèves
                   avec actualités, événements, espace administrateur sécurisé et
-                  conformité accessibilité WCAG 2.1 AA.
+                  conformité accessibilité WCAG 2.1 AA. Site développé
+                  gratuitement pour l'association.
                 </p>
                 <div class="flex flex-wrap gap-2 mb-4">
                   <span
@@ -1282,6 +1285,10 @@
                   <span
                     class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium"
                     >PostgreSQL</span
+                  >
+                  <span
+                    class="px-3 py-1 bg-gray-200 text-gray-700 rounded-full text-sm font-medium"
+                    >Sequelize</span
                   >
                 </div>
                 <a
@@ -1602,7 +1609,7 @@
               >
               <span
                 class="px-3 py-1 bg-gray-500/20 text-gray-300 rounded-lg text-sm border border-gray-500/30"
-                >SQL</span
+                >PostgreSQL/MySQL</span
               >
             </div>
           </div>
