--- a/projects/ape-la-croixille.html
+++ b/projects/ape-la-croixille.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="APE La Croixille — site web associatif full-stack avec espace administrateur, gestion des événements et des actualités, conçu pour l'Association des Parents d'Élèves."
+      content="APE La Croixille — site web associatif full-stack avec espace administrateur, gestion des événements et des actualités, développé gratuitement pour l'Association des Parents d'Élèves."
     />
     <meta name="author" content="Aurélien Thébault" />
     <meta
@@ -145,7 +145,8 @@
               Le projet inclut une partie publique claire et mobile-first,
               ainsi qu'un espace administrateur sécurisé permettant la gestion
               complète des contenus (articles, événements, catégories) avec une
-              attention particulière portée à l'accessibilité.
+              attention particulière portée à l'accessibilité. Le site a été
+              développé gratuitement pour soutenir l'association locale.
             </p>
           </div>
         </section>
@@ -272,7 +273,7 @@
           <h2 class="text-3xl font-bold text-gray-900 mb-6">Liens</h2>
           <p class="text-sm text-gray-500 italic">
             <i class="fas fa-info-circle mr-1"></i>
-            Projet associatif — dépôt privé et accès démo sur demande.
+            Projet associatif développé gratuitement — dépôt privé et accès démo sur demande.
           </p>
         </section>
       </div>
