--- a/projects/ape-la-croixille.html
+++ b/projects/ape-la-croixille.html
@@ -253,20 +253,36 @@
 
         <section class="mb-12">
           <h2 class="text-3xl font-bold text-gray-900 mb-6">Captures d'écran</h2>
-          <div
-            class="bg-gradient-to-br from-gray-50 to-gray-100 p-8 rounded-xl border-2 border-dashed border-gray-300"
-          >
-            <div class="text-center">
-              <i class="fas fa-images text-gray-400 text-6xl mb-4"></i>
-              <h3 class="text-xl font-semibold text-gray-700 mb-2">
-                Galerie à compléter
-              </h3>
-              <p class="text-gray-600">
-                Les captures du site APE seront ajoutées ici (pages publiques,
-                actualités, événements et espace admin).
-              </p>
+          <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-4">
+            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+              <p class="text-sm font-semibold text-gray-700 mb-1">Slot 01</p>
+              <p class="text-xs text-gray-500">images/projects/ape/gallery/ape-01-home.webp</p>
+            </div>
+            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+              <p class="text-sm font-semibold text-gray-700 mb-1">Slot 02</p>
+              <p class="text-xs text-gray-500">images/projects/ape/gallery/ape-02-evenements.webp</p>
+            </div>
+            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+              <p class="text-sm font-semibold text-gray-700 mb-1">Slot 03</p>
+              <p class="text-xs text-gray-500">images/projects/ape/gallery/ape-03-actualites.webp</p>
+            </div>
+            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+              <p class="text-sm font-semibold text-gray-700 mb-1">Slot 04</p>
+              <p class="text-xs text-gray-500">images/projects/ape/gallery/ape-04-admin-dashboard.webp</p>
+            </div>
+            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+              <p class="text-sm font-semibold text-gray-700 mb-1">Slot 05</p>
+              <p class="text-xs text-gray-500">images/projects/ape/gallery/ape-05-admin-articles.webp</p>
+            </div>
+            <div class="bg-gradient-to-br from-gray-50 to-gray-100 p-5 rounded-xl border-2 border-dashed border-gray-300">
+              <p class="text-sm font-semibold text-gray-700 mb-1">Slot 06</p>
+              <p class="text-xs text-gray-500">images/projects/ape/gallery/ape-06-mobile.webp</p>
             </div>
           </div>
+          <p class="text-sm text-gray-500 mt-4 italic">
+            <i class="fas fa-folder-open mr-1"></i>
+            Déposez vos captures dans <strong>images/projects/ape/gallery/</strong> en gardant ces noms de fichiers.
+          </p>
         </section>
 
         <section class="mb-12">
