feat: remplacer logo ClimatServ par la nouvelle version

--- a/index.html
+++ b/index.html
@@ -1163,7 +1163,7 @@
             >
               <div class="relative overflow-hidden group h-64 flex-shrink-0">
                 <img
-                  src="images/projects/climatserv/climatserv17-logo.webp"
+                  src="images/projects/climatserv/new-logo-seul-sans-fond.png"
                   alt="Logo ClimatServ17 - Application de services climatiques"
                   class="w-full h-full object-contain bg-gradient-to-br from-slate-700 via-slate-600 to-cyan-700 transition-transform duration-300 group-hover:scale-110 p-8"
                   loading="lazy"
