--- a/projects/climatserv17.html
+++ b/projects/climatserv17.html
@@ -108,7 +108,7 @@
           class="inline-block p-4 bg-gradient-to-br from-gray-900 via-cyan-900 to-gray-800 rounded-2xl mb-6"
         >
           <img
-            src="../images/projects/climatserv/climatserv17-logo.webp"
+            src="../images/projects/climatserv/new-logo-seul-sans-fond.png"
             alt="Logo ClimatServ17"
             class="w-32 h-32 object-contain"
           />
