style: harmoniser APE en tons violet/jaune

--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,7 @@
                 <img
                   src="images/projects/ape/ape-logo-contour.png"
                   alt="Logo APE La Croixille"
-                  class="w-full h-full object-contain bg-gradient-to-br from-slate-700 via-amber-800 to-slate-900 transition-transform duration-300 group-hover:scale-110 p-8"
+                  class="w-full h-full object-contain bg-gradient-to-br from-violet-900 via-purple-800 to-indigo-900 transition-transform duration-300 group-hover:scale-110 p-8"
                   loading="lazy"
                   width="400"
                   height="300"
