--- a/projects/ape-la-croixille.html
+++ b/projects/ape-la-croixille.html
@@ -97,11 +97,11 @@
     </nav>
 
     <section
-      class="pt-24 pb-12 bg-gradient-to-br from-slate-900 via-gray-800 to-amber-900"
+      class="pt-24 pb-12 bg-gradient-to-br from-violet-900 via-purple-900 to-indigo-900"
     >
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
         <div
-          class="inline-block p-4 bg-gradient-to-br from-slate-900 via-amber-900 to-slate-800 rounded-2xl mb-6"
+          class="inline-block p-4 bg-gradient-to-br from-violet-900 via-purple-800 to-indigo-900 rounded-2xl mb-6"
         >
           <img
             src="../images/projects/ape/ape-logo-contour.png"
